--- a/csus.html
+++ b/csus.html
@@ -34,9 +34,12 @@
 				</div>
 				
 				<div class="profile-content-wrapper">
-					<h1>Thanks for checking out my site.</h1> 
-					<p>It is currently being renovated.</p>
-					<p>Check back later for updates. </p>
+					<h1>CSUS Fall 2019 Schedule</h1> 
+					<p>CSC 134   Database Mgmt Systems</p>
+					<p>CSC 135   Comp Theory & Prog Langs</p>
+					<P>CSC 137   Computer Organization</p>
+					<p>CSC 138   Computer Network+Internet</p>
+					<p>ENGR 115  Statistics For Engineers</p>
 				
 				</div>
 			</div>
