--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 					<div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)"></div>
 				
 					<div class="img-text-wrapper">
-						<div class="logo-wrapper">
-							<img src="images/logos/crondose.png">
-						</div>
+						<div class="logo-wrapper"><a href="work.html">
+							<img src="images/logos/renda.png">
+						</a></div>
 						
 						<div class="subtitle">
-							Coming Soon!
+							Work experience and resume.
 						</div>
 					</div>
 				</div>
