--- a/work.html
+++ b/work.html
@@ -29,24 +29,20 @@
 		<div class="content-wrapper">
 			<div class="two-column-wrapper">
 				<div class="profile-iframe-wrapper">
-					<embed src="2019 Resume Current.pdf" type="application/pdf" width="100%" height="600px" />
+					<h1> Duty Statement for IT Student </h1>
+					<embed src="duty1.pdf" type="application/pdf" width="100%" height="600px" />
 					<!--img src="images/profile.jpg"-->
 				</div>
 				
-				<div class="profile-content-wrapper">
-					<h1>CSUS Fall 2019 Schedule</h1> 
-					<p>CSC 134   Database Mgmt Systems</p>
-					<p>CSC 135   Comp Theory & Prog Langs</p>
-					<P>CSC 137   Computer Organization</p>
-					<p>CSC 138   Computer Network+Internet</p>
-					<p>ENGR 115  Statistics For Engineers</p>
-				
+				<div class="profile-iframe-wrapper">
+					<h1>Resume</h1>
+					<embed src="2019 Resume Current.pdf" type="application/pdf" width="100%" height="600px" />
+					<!--img src="images/profile.jpg"-->
 				</div>
 			</div>
 		</div>
 		
 	</div>
-	<iframe width="100%" height="300" src="//jsfiddle.net/q76uzxwe/1/embedded/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 </body>
 </html>
 
