--- a/chess.html
+++ b/chess.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset = "utf-8" />
-	<title>About</title>
+	<title>Chess</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -25,28 +25,10 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="content-wrapper">
-			<div class="two-column-wrapper">
-				<div class="profile-iframe-wrapper">
-					<embed src="2019 Resume Current.pdf" type="application/pdf" width="100%" height="600px" />
-					<!--img src="images/profile.jpg"-->
-				</div>
-				
-				<div class="profile-content-wrapper">
-					<h1>CSUS Fall 2019 Schedule</h1> 
-					<p>CSC 134   Database Mgmt Systems</p>
-					<p>CSC 135   Comp Theory & Prog Langs</p>
-					<P>CSC 137   Computer Organization</p>
-					<p>CSC 138   Computer Network+Internet</p>
-					<p>ENGR 115  Statistics For Engineers</p>
-				
-				</div>
-			</div>
-		</div>
-		
+	<iframe width="100%" height="300" src="//jsfiddle.net/q76uzxwe/1/embedded/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>	
+
 	</div>
-	
+	<script async src="//jsfiddle.net/q76uzxwe/1/embed/"></script>
 </body>
 </html>
 
