--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 		<div class="content-wrapper">
 			<div class="two-column-wrapper">
 				<div class="profile-image-wrapper">
-					<img src="images/profile.jpg" alt="">
+					<img src="images/me.jpg" alt="">
 					<!--img src="images/profile.jpg"-->
 				</div>
 				
