--- a/Recipes/shakshuka.html
+++ b/Recipes/shakshuka.html
@@ -5,7 +5,7 @@
 	
 	<title>Stephen Renda Jr's Website</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="C:\Users\stephen.renda\Desktop\HTML_Prac\Website\styles.css">
+	<link rel="stylesheet" href="..\styles.css">
 </head>
 <body>
 	<div class="container">		
