--- a/Recipes/shakshuka.html
+++ b/Recipes/shakshuka.html
@@ -5,7 +5,7 @@
 	
 	<title>Stephen Renda Jr's Website</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="..\styles.css">
+	<link rel="stylesheet" href="..\styles.css"  href="https://stephenrenda.github.io/Website/recipes.html">
 </head>
 <body>
 	<div class="container">		
